CAMEL-11868: New ElasticSearch5 REST component

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -199,8 +199,9 @@
     <elasticsearch-bundle-version>2.4.4_1</elasticsearch-bundle-version>
     <elasticsearch-guava-version>18.0</elasticsearch-guava-version>
     <elasticsearch-version>2.4.4</elasticsearch-version>
-    <elasticsearch5-version>5.5.2</elasticsearch5-version>
+    <elasticsearch5-version>5.6.1</elasticsearch5-version>
     <elasticsearch5-bundle-version>5.5.2_1</elasticsearch5-bundle-version>
+    <elasticsearch-sniffer-version>5.6.2</elasticsearch-sniffer-version>
     <elasticsearch-cluster-runner-version>2.4.0.0</elasticsearch-cluster-runner-version>
     <elasticsearch5-cluster-runner-version>5.5.2.0</elasticsearch5-cluster-runner-version>
     <elsql-version>1.2</elsql-version>
