--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -462,6 +462,7 @@
     <lightcouch-version>0.1.8</lightcouch-version>
     <lightcouch-gson-version>2.4</lightcouch-gson-version>
     <lightcouch-bundle-version>0.1.8_2</lightcouch-bundle-version>
+    <lz4-version>1.2.0</lz4-version>
     <!-- needed from tooling/archetypes -->
     <!-- use antrun 1.6 as 1.7 fails with finding tools.jar on java on some platforms -->
     <maven-antrun-plugin-version>1.6</maven-antrun-plugin-version>
