--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -701,7 +701,8 @@
     <velocity-bundle-version>1.7_6</velocity-bundle-version>
     <velocity-tools-version>2.0</velocity-tools-version>
     <velocity-version>2.0</velocity-version>
-    <vertx-version>3.4.2</vertx-version>
+    <vertx-version>3.5.0</vertx-version>
+    <vertx-jackson2-version>2.9.0</vertx-jackson2-version>
     <vysper-version>0.7</vysper-version>
     <weld1-version>1.1.28.Final</weld1-version>
     <weld2-version>2.4.5.Final</weld2-version>
