CAMEL-11869: Upgrade camel-beanstalk to mockito-core 2.11.0

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -502,6 +502,7 @@
     <mock-javamail-version>1.9</mock-javamail-version>
     <mockwebserver-version>0.0.15</mockwebserver-version>
     <mockito-version>1.10.19</mockito-version>
+    <mockito2-version>2.11.0</mockito2-version>
     <mongo-java-driver-version>3.5.0</mongo-java-driver-version>
     <mongo-java-driver32-version>3.2.2</mongo-java-driver32-version>
     <mongo-hadoop-version>1.5.0</mongo-hadoop-version>
